# books-api-lambda-rust-based

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
deploy/: package-lock.json
deploy/lib/: deploy-stack.ts
src/: main.rs
