[package]
name = "books-api-lambda-rust-based"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "1.0"

[dependencies]
axum = "0.7"
lambda_http = { version = "0.12.0" }
lambda_runtime = { version = "0.12.0" }
serde = "1.0.196"
serde_json = "1.0"
aws-sdk-dynamodb = "0.33.0"
aws-config = "0.56.1"
serde_dynamo = {version = "^4.2.7", features = ["aws-sdk-dynamodb+0_33"]}
tokio = { version = "1", features = ["macros"] }
